@@ -138,7 +138,7 @@ public class FriendRequestServiceImpl implements FriendRequestService {
         List<FriendRequest> requestsIfExists = friendRequestRepository.findBySenderAndReceiver(sender, receiver);
         if (requestsIfExists.isEmpty()) {
             return 0; // No friend request exists
-        } else if (!requestsIfExists.getFirst().isAccepted()) {
+        } else if (!requestsIfExists.get(0).isAccepted()) {
             return -1; // Friend request already sent but not accepted
         } else {
             return 1; // Already friends
@@ -160,7 +160,7 @@ public class FriendRequestServiceImpl implements FriendRequestService {
         List<FriendRequest> requestsAsSender = friendRequestRepository.findBySenderAndReceiver(user, friend);
         List<FriendRequest> requestsAsReceiver = friendRequestRepository.findBySenderAndReceiver(friend, user);
 
-        requestsAsSender.forEach(friendRequestRepository::delete);
-        requestsAsReceiver.forEach(friendRequestRepository::delete);
+        friendRequestRepository.deleteAll(requestsAsSender);
+        friendRequestRepository.deleteAll(requestsAsReceiver);
     }
 }
